--- a/01_lenslocked/cmd/exp/hello.tmpl.html
+++ b/01_lenslocked/cmd/exp/hello.tmpl.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Welcome {{.Name}}!</h1>
-    <p>You're {{.Age}} years old.</p>
-    <p>You have visited this site {{.Meta.Visited}} times.</p>
+    <p>{{.SafeBio}}</p>
+    <p>{{.DangerousBio}}</p>
   </body>
 </html>
